--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -49,33 +49,33 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
         
-        #- name: Cache Linux ROOT
-        #  if: ${{runner.os == 'Linux'}}
-        #  uses: actions/cache@v3
-        #  id: cache-root
-        #  with:
-        #    path: root_v${{matrix.config.root}}
-        #    key: ${{runner.os}}-root_v${{matrix.config.root}}-${{hashFiles('**/root')}}
-        #    restore-keys: ${{runner.os}}-root_v${{matrix.config.root}}-
+    - name: Cache Linux ROOT
+      if: ${{runner.os == 'Linux'}}
+      uses: actions/cache@v3
+      id: cache-root
+      with:
+        path: root_v${{matrix.config.root}}
+        key: ${{runner.os}}-root_v${{matrix.config.root}}-${{hashFiles('**/root')}}
+        restore-keys: ${{runner.os}}-root_v${{matrix.config.root}}-
 
     - name: Compile Linux ROOT
-      if: ${{runner.os == 'Linux'}}
+      if: ${{steps.cache-root.outputs.cache-hit != 'true' && runner.os == 'Linux'}}
       run: |
         sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3 gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev
         wget https://root.cern/download/root_v${{matrix.config.root}}.source.tar.gz
         tar -xzf root_v${{matrix.config.root}}.source.tar.gz
         mkdir root_v${{matrix.config.root}}
-        cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}}-build -DCMAKE_INSTALL_PREFIX=root_v${{matrix.config.root}} -Dasimage=ON -Dbuiltin_afterimage=ON -Dbuiltin_clang=ON -Dbuiltin_cling=ON -Dbuiltin_cppzmq=ON -Dbuiltin_davix=ON -Dbuiltin_gl2ps=ON -Dbuiltin_llvm=ON -Dbuiltin_openui5=ON -Dbuiltin_tbb=ON -Dbuiltin_unuran=ON -Dbuiltin_vdt=ON -Dbuiltin_veccore=ON -Dbuiltin_xrootd=ON -Dbuiltin_xxhash=ON -Dbuiltin_zeromq=ON -Dcefweb=ON -Ddataframe=ON -Ddavix=ON -Dfftw3=ON -Dfitsio=ON -Dfortran=ON -Dgdml=ON -Dgviz=ON -Dhttp=ON -Dimt=ON -Dmathmore=ON -Dmlp=ON -Dmysql=ON -Dodbc=ON -Dopengl=ON -Dpgsql=ON -Dproof=ON -Dpyroot=ON -Dqt5web=ON -Droofit=ON -Droofit_multiprocess=ON -Dwebgui=ON -Drpath=ON -Druntime_cxxmodules=ON -Dshadowpw=ON -Dshared=ON -Dsqlite=ON -Dssl=ON -Dtmva=ON -Dtmva-cpu=ON -Dtmva-pymva=ON -Dspectrum=ON -Dunuran=ON -Dvdt=ON -Dveccore=ON -Dx11=ON -Dxml=ON -Dxrootd=ON
+        cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}}-build -DCMAKE_INSTALL_PREFIX=root_v${{matrix.config.root}} -Dasimage=ON -Dbuiltin_afterimage=ON -Dbuiltin_clang=ON -Dbuiltin_cling=ON -Dbuiltin_cppzmq=ON -Dbuiltin_davix=ON -Dbuiltin_gl2ps=ON -Dbuiltin_llvm=ON -Dbuiltin_openui5=ON -Dbuiltin_tbb=ON -Dbuiltin_unuran=ON -Dbuiltin_vdt=ON -Dbuiltin_veccore=ON -Dbuiltin_xrootd=ON -Dbuiltin_xxhash=ON -Dbuiltin_zeromq=ON -Dcefweb=ON -Ddataframe=ON -Ddavix=ON -Dfftw3=ON -Dfitsio=ON -Dfortran=ON -Dgdml=ON -Dgviz=ON -Dhttp=ON -Dimt=ON -Dmathmore=ON -Dmlp=ON -Dmysql=ON -Dodbc=ON -Dopengl=ON -Dpgsql=ON -Dproof=ON -Dpyroot=ON -Dqt5web=ON -Droofit=ON -Droofit_multiprocess=ON -Dwebgui=ON -Drpath=ON -Druntime_cxxmodules=ON -Dshadowpw=ON -Dshared=ON -Dsqlite=ON -Dssl=ON -Dtmva=ON -Dtmva-cpu=ON -Dtmva-pymva=ON -Dspectrum=ON -Dunuran=ON -Dvdt=ON -Dveccore=ON -Dx11=ON -Dxml=ON -Dbuiltin_xrootd=ON
         cmake --build root_v${{matrix.config.root}}-build -- -j4
 
     - name: Install ROOT
-      #if: steps.cache-root.outputs.cache-hit != 'true'
+      if: steps.cache-root.outputs.cache-hit != 'true'
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-          cmake --build root_v${{matrix.config.root}}-build -- install -j4
+        cmake --build root_v${{matrix.config.root}}-build -- install -j4
         elif [ "$RUNNER_OS" == "macOS" ]; then
-          brew install libxpm
-          brew install root
+        brew install libxpm
+        brew install root
         fi
       shell: bash
 
@@ -83,19 +83,19 @@ jobs:
       #if: ${{hashFiles('root_v${{matrix.config.root}}/bin/thisroot.sh') != ''}}
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-          source root_v${{matrix.config.root}}/bin/thisroot.sh
+        source root_v${{matrix.config.root}}/bin/thisroot.sh
         elif [ "$RUNNER_OS" == "macOS" ]; then
-          source /opt/homebrew/bin/thisroot.sh
-          ln -s /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/Tk.framework/Versions/8.5/Headers/X11/ /usr/local/include/X11
-          ls -l /usr/local/include/X11
-          ls -l /opt/homebrew/include/
-          echo "finding Xlib.h"
-          find /opt/homebrew -name Xlib.h
+        source /opt/homebrew/bin/thisroot.sh
+        #ln -s /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/Tk.framework/Versions/8.5/Headers/X11/ /usr/local/include/X11
+        ls -l /usr/local/include/X11
+        ls -l /opt/homebrew/include/
+        echo "finding Xlib.h"
+        find /opt/homebrew -name Xlib.h
         fi
         whichroot=`which root`
         echo "using $whichroot"
       shell: bash
-        
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -112,6 +112,6 @@ jobs:
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.config.build_type }}
