--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -58,14 +58,23 @@ jobs:
         key: ${{runner.os}}-root_v${{matrix.config.root}}-${{hashFiles('**/root')}}
         restore-keys: ${{runner.os}}-root_v${{matrix.config.root}}-
 
-    - name: Compile Linux ROOT
+    - name: Linux - Install packages and Download ROOT
       if: ${{steps.cache-root.outputs.cache-hit != 'true' && runner.os == 'Linux'}}
       run: |
         sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3 gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev
         wget https://root.cern/download/root_v${{matrix.config.root}}.source.tar.gz
         tar -xzf root_v${{matrix.config.root}}.source.tar.gz
         mkdir root_v${{matrix.config.root}}
-        cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}}-build -DCMAKE_INSTALL_PREFIX=root_v${{matrix.config.root}} -Dasimage=ON -Dbuiltin_afterimage=ON -Dbuiltin_clang=ON -Dbuiltin_cling=ON -Dbuiltin_cppzmq=ON -Dbuiltin_davix=ON -Dbuiltin_gl2ps=ON -Dbuiltin_llvm=ON -Dbuiltin_openui5=ON -Dbuiltin_tbb=ON -Dbuiltin_unuran=ON -Dbuiltin_vdt=ON -Dbuiltin_veccore=ON -Dbuiltin_xxhash=ON -Dbuiltin_zeromq=ON -Dcefweb=ON -Ddataframe=ON -Ddavix=ON -Dfftw3=ON -Dfitsio=ON -Dfortran=ON -Dgdml=ON -Dgviz=ON -Dhttp=ON -Dimt=ON -Dmathmore=ON -Dmlp=ON -Dmysql=ON -Dodbc=ON -Dopengl=ON -Dpgsql=ON -Dproof=ON -Dpyroot=ON -Dqt5web=ON -Droofit=ON -Droofit_multiprocess=ON -Dwebgui=ON -Drpath=ON -Druntime_cxxmodules=ON -Dshadowpw=ON -Dshared=ON -Dsqlite=ON -Dssl=ON -Dtmva=ON -Dtmva-cpu=ON -Dtmva-pymva=ON -Dspectrum=ON -Dunuran=ON -Dvdt=ON -Dveccore=ON -Dx11=ON -Dxml=ON
+
+    - name: Linux  - Configure ROOT
+      if: ${{steps.cache-root.outputs.cache-hit != 'true' && runner.os == 'Linux'}}
+      run: >
+        cmake -S root-${{matrix.config.root}} -B root_v${{matrix.config.root}}-build -DCMAKE_INSTALL_PREFIX=root_v${{matrix.config.root}}
+        -Dasimage=ON -Dbuiltin_afterimage=ON -Dbuiltin_clang=ON -Dbuiltin_cling=ON -Dbuiltin_cppzmq=ON -Dbuiltin_davix=ON -Dbuiltin_gl2ps=ON -Dbuiltin_llvm=ON -Dbuiltin_openui5=ON -Dbuiltin_tbb=ON -Dbuiltin_unuran=ON -Dbuiltin_vdt=ON -Dbuiltin_veccore=ON -Dbuiltin_xxhash=ON -Dbuiltin_zeromq=ON -Dcefweb=ON -Ddataframe=ON -Ddavix=ON -Dfftw3=ON -Dfitsio=ON -Dfortran=ON -Dgdml=ON -Dgviz=ON -Dhttp=ON -Dimt=ON -Dmathmore=ON -Dmlp=ON -Dmysql=ON -Dodbc=ON -Dopengl=ON -Dpgsql=ON -Dproof=ON -Dpyroot=ON -Dqt5web=ON -Droofit=ON -Droofit_multiprocess=ON -Dwebgui=ON -Drpath=ON -Druntime_cxxmodules=ON -Dshadowpw=ON -Dshared=ON -Dsqlite=ON -Dssl=ON -Dtmva=ON -Dtmva-cpu=ON -Dtmva-pymva=ON -Dspectrum=ON -Dunuran=ON -Dvdt=ON -Dveccore=ON -Dx11=ON -Dxml=ON
+
+    - name: Linux - Compile ROOT
+      if: ${{steps.cache-root.outputs.cache-hit != 'true' && runner.os == 'Linux'}}
+      run: |
         cmake --build root_v${{matrix.config.root}}-build -- -j4
 
     - name: Install ROOT
@@ -87,8 +96,7 @@ jobs:
         elif [ "$RUNNER_OS" == "macOS" ]; then
         source /opt/homebrew/bin/thisroot.sh
         #ln -s /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/Tk.framework/Versions/8.5/Headers/X11/ /usr/local/include/X11
-        ls -l /opt/homebrew/
-        ls -l /opt/homebrew/include/
+        ls -l /opt/homebrew/include/X11
         echo "finding Xlib.h"
         find /opt/homebrew -name Xlib.h
         fi
