Added find ROOTConfig.cmake

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -99,6 +99,7 @@ jobs:
         fi
         whichroot=`which root`
         echo "using $whichroot"
+        find ${{github.workspace}} -name ROOTConfig.cmake
       shell: bash
 
     - name: Configure CMake
