--- a/.github/workflows/ubuntu-binary-ROOT.yml
+++ b/.github/workflows/ubuntu-binary-ROOT.yml
@@ -19,33 +19,35 @@ jobs:
       # cc: "gcc" or c_compiler: gcc? cxx: "g++" or cpp_compiler: g++?
       matrix:
         config:
+          # these all fail, probably a mismatch of c++ standard?:
+          #- {
+          #    name: "Binary ROOT 6.20.08, Ubuntu 20.04", artifact: "UbuntuROOT6.20.08.tar.xz",
+          #    os: ubuntu-20.04, root: "6.20.08", root_binary: "https://root.cern/download/root_v6.20.08.Linux-ubuntu20-x86_64-gcc9.3.tar.gz",
+          #    build_type: "Release", cc: "gcc", cxx: "g++"
+          #  }
+          #- {
+          #    name: "Binary ROOT 6.22.08, Ubuntu 20.04", artifact: "UbuntuROOT6.22.08.tar.xz",
+          #    os: ubuntu-20.04, root: "6.22.08", root_binary: "https://root.cern/download/root_v6.22.08.Linux-ubuntu20-x86_64-gcc9.3.tar.gz",
+          #    build_type: "Release", cc: "gcc", cxx: "g++"
+          #  }
+          #- {
+          #    name: "Binary ROOT 6.24.08, Ubuntu 20.04", artifact: "UbuntuROOT6.24.08.tar.xz",
+          #    os: ubuntu-20.04, root: "6.24.08", root_binary: "https://root.cern/download/root_v6.24.08.Linux-ubuntu20-x86_64-gcc9.4.tar.gz",
+          #    build_type: "Release", cc: "gcc", cxx: "g++"
+          #  }
+          #  this one fails because mathmore is missing:
+          #- {
+          #    name: "Binary ROOT 6.26.16, Ubuntu 22.04", artifact: "UbuntuROOT6.26.16.tar.xz",
+          #    os: ubuntu-22.04, root: "6.26.16", root_binary: "https://root.cern/download/root_v6.26.16.Linux-ubuntu22-x86_64-gcc11.4.debug.tar.gz",
+          #    build_type: "Release", cc: "gcc", cxx: "g++"
+          #  }
         - {
-            name: "Ubuntu 20.04 gcc, binary ROOT 6.20.08", artifact: "UbuntuROOT6.20.08.tar.xz",
-            os: ubuntu-20.04, root: "6.20.08", root_binary: "https://root.cern/download/root_v6.20.08.Linux-ubuntu20-x86_64-gcc9.3.tar.gz",
-            build_type: "Release", cc: "gcc", cxx: "g++"
-          }
-        - {
-            name: "Ubuntu 20.04 gcc, binary ROOT 6.22.08", artifact: "UbuntuROOT6.22.08.tar.xz",
-            os: ubuntu-20.04, root: "6.22.08", root_binary: "https://root.cern/download/root_v6.22.08.Linux-ubuntu20-x86_64-gcc9.3.tar.gz",
-            build_type: "Release", cc: "gcc", cxx: "g++"
-          }
-        - {
-            name: "Ubuntu 20.04 gcc, binary ROOT 6.24.08", artifact: "UbuntuROOT6.24.08.tar.xz",
-            os: ubuntu-20.04, root: "6.24.08", root_binary: "https://root.cern/download/root_v6.24.08.Linux-ubuntu20-x86_64-gcc9.4.tar.gz",
-            build_type: "Release", cc: "gcc", cxx: "g++"
-          }
-        - {
-            name: "Ubuntu 22.04 gcc, binary ROOT 6.26.16", artifact: "UbuntuROOT6.26.16.tar.xz",
-            os: ubuntu-22.04, root: "6.26.16", root_binary: "https://root.cern/download/root_v6.26.16.Linux-ubuntu22-x86_64-gcc11.4.debug.tar.gz",
-            build_type: "Release", cc: "gcc", cxx: "g++"
-          }
-        - {
-            name: "Ubuntu 22.04 gcc, binary ROOT 6.28.12", artifact: "UbuntuROOT6.28.12.tar.xz",
+            name: "Binary ROOT 6.28.12, Ubuntu 22.04", artifact: "UbuntuROOT6.28.12.tar.xz",
             os: ubuntu-22.04, root: "6.28.12", root_binary: "https://root.cern/download/root_v6.28.12.Linux-ubuntu22-x86_64-gcc11.4.tar.gz",
             build_type: "Release", cc: "gcc", cxx: "g++"
           }
         - {
-            name: "Ubuntu 22.04 gcc, binary ROOT 6.30.06", artifact: "UbuntuROOT6.30.06.tar.xz",
+            name: "Binary ROOT 6.30.06, Ubuntu 22.04", artifact: "UbuntuROOT6.30.06.tar.xz",
             os: ubuntu-22.04, root: "6.30.06", root_binary: "https://root.cern/download/root_v6.30.06.Linux-ubuntu22.04-x86_64-gcc11.4.tar.gz",
             build_type: "Release", cc: "gcc", cxx: "g++"
           }
@@ -63,7 +65,7 @@ jobs:
         
     - name: Install packages
       run: |
-        sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3 gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev
+        sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3 gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev libtbb-dev
 
     - name: Download ROOT
       run: |
