--- a/.github/workflows/ubuntu-binary-ROOT.yml
+++ b/.github/workflows/ubuntu-binary-ROOT.yml
@@ -94,7 +94,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{steps.strings.outputs.build-output-dir}} --config ${{matrix.config.build_type}}
+      run: cmake --build ${{steps.strings.outputs.build-output-dir}} --config ${{matrix.config.build_type}} -j4
 
     - name: Test
       working-directory: ${{steps.strings.outputs.build-output-dir}}
