--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -22,7 +22,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create footer
-        run: doxygen/makehtmlfooter.sh > doxygen/footer.html
+        run: |
+          doxygen/makehtmlfooter.sh > doxygen/footer.html
+          ls -lh doxygen
+          if [ -e doxygen/footer.html ] ; then cat doxygen/footer.html ; fi
         shell: bash
 
       - name: Doxygen Action
@@ -33,6 +36,11 @@ jobs:
             # Working directory
           working-directory: "doxygen/" # default is .
             #enable-latex: true # default is false
+
+      - name: List result
+        run: |
+          ls -lh 
+          ls -lh doxygen
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
