changed publish directory to doxygen/html

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -48,6 +48,6 @@ jobs:
           github_token: ${{secrets.GITHUB_TOKEN}}
             # Default Doxyfile build documentation to html directory. 
             # Change the directory if changes in Doxyfile
-          publish_dir: ./html
+          publish_dir: doxygen/html
             # this corresponds to: http://<your-github-username>.github.io/<your-repo-name>/index.html
             # old: https://rawgit.com/wiki/GriffinCollaboration/GRSISort/technical-docs/ROOT-Gen-Html/htmldoc/index.html
