--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: List result
-        run: |
-          ls -lh 
-          pwd
-        shell: bash
+      - name: Set version
+        run: echo "DOXYGEN_GRSISORT_VERSION=$(shell util/grsi-config --version)" >> $GITHUB_ENV
+
+      - name: test
+        run: echo $DOXYGEN_GRSISORT_VERSION
 
     # Check out the data libraries
       - name: Checkout GRSIData
