--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -21,8 +21,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: "Get tag"
+        id: gettag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+
       - name: Set version
-        run: echo "DOXYGEN_GRSISORT_VERSION=$(git describe --abbrev=0 --match \"v*\" --tags)" >> $GITHUB_ENV
+        run: echo "DOXYGEN_GRSISORT_VERSION=${{steps.gettag.outputs.tag}}" >> $GITHUB_ENV
 
       - name: test
         run: echo $DOXYGEN_GRSISORT_VERSION
