--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -24,9 +24,11 @@ jobs:
       - name: "Get tag"
         id: gettag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        with:
+          fallback: 1.0.0.0
 
       - name: Set version
-        run: echo "DOXYGEN_GRSISORT_VERSION=${{steps.gettag.outputs.tag}}" >> $GITHUB_ENV
+        run: echo "DOXYGEN_GRSISORT_VERSION=${{ steps.gettag.outputs.tag }}" >> $GITHUB_ENV
 
       - name: test
         run: echo $DOXYGEN_GRSISORT_VERSION
