Adding debugging steps

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -21,13 +21,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-tags: true
+          fetch-depth: 0
 
-      - name: "Get tag"
-        run: |
-          git describe --tags
-          git describe --abbrev=0 --tags
-          git describe --abbrev=0 --match \"v*\" --tags
+      - name: "Describe tags"
+        run: git describe --tags
+
+      - name: "Describe tags abbrev"
+        run: git describe --abbrev=0 --tags
+
+      - name: "Describe tags abbrev match"
+        run: git describe --abbrev=0 --match \"v*\" --tags
 
       - name: Set version
         run: echo "DOXYGEN_GRSISORT_VERSION=${{ steps.gettag.outputs.tag }}" >> $GITHUB_ENV
