--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set version
-        run: echo "DOXYGEN_GRSISORT_VERSION=$(git describe --abbrev=0 --tags)" >> $GITHUB_ENV
+        run: echo "DOXYGEN_GRSISORT_VERSION=\"$(git describe --abbrev=0 --tags)\"" >> $GITHUB_ENV
 
     # Check out the data libraries
       - name: Checkout GRSIData
