--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -24,7 +24,10 @@ jobs:
           fetch-depth: 0
 
       - name: Set version
-        run: echo "DOXYGEN_GRSISORT_VERSION=\"$(git describe --abbrev=0 --tags)\"" >> $GITHUB_ENV
+        shell: bash
+        run: |
+          GRSISORT_VERSION="$(git describe --abbrev=0 --tags)"
+          echo "DOXYGEN_GRSISORT_VERSION=\"$GRSISORT_VERSION\"" >> $GITHUB_ENV
 
     # Check out the data libraries
       - name: Checkout GRSIData
@@ -52,9 +55,9 @@ jobs:
           path: HILData
 
       - name: Create footer
+        shell: bash
         run: |
           doxygen/makehtmlfooter.sh > doxygen/footer.html
-        shell: bash
 
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@v1.9.8
