--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -21,7 +21,12 @@ env:
   #
   # When active, APPLY_FIXES must also be defined as environment variable
   # (in github/workflows/mega-linter.yml or other CI tool)
-  APPLY_FIXES: MARKDOWN_MARKDOWNLINT
+  APPLY_FIXES: 
+    - BASH_SHELLCHECK
+    - CPP_CLANG_FORMAT
+    - MARKDOWN_MARKDOWNLINT
+    - ACTION_ACTIONLINT
+    - REPOSITORT_GITLEAKS
 
   # Decide which event triggers application of fixes in a commit or a PR
   # (pull_request, push, all)
