--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -107,6 +107,7 @@ jobs:
       # Set APPLY_FIXES_IF var for use in future steps
       - name: Set APPLY_FIXES_IF var
         run: |
+          echo "steps.ml.outputs.has_updated_sources = " steps.ml.outputs.has_updated_sources ", github.event_name = " github.event_name ", github.event.pull_request.head.repo.full_name = " github.event.pull_request.head.repo.full_name ", github.repository = " github.repository
           printf 'APPLY_FIXES_IF=%s\n' "${{
             steps.ml.outputs.has_updated_sources == 1 &&
             (
