Have cmake create compile_commands.json for clang-tidy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -419,3 +419,9 @@ FetchContent_MakeAvailable(
 	iThembaData
 	)
 
+#----------------------------------------------------------------------------
+# create a compile_commands.json file which can be used for clang-tidy
+if(NOT DEFINED ENV{CMAKE_EXPORT_COMPILE_COMMANDS})
+    message("ENV(CMAKE_EXPORT_COMPILE_COMMANDS) NOT DEFINED")
+    set($ENV{CMAKE_EXPORT_COMPILE_COMMANDS} TRUE)
+endif()
