--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -23,6 +23,7 @@ jobs:
           tidy-checks: '' # Use .clang-tidy config file.
           thread-comments: ${{ github.event_name == 'pull_request' && 'update' }}
           ignore: 'include/GVersion.h'
+          files-changed-only: false
 
       - name: Fail fast?!
         if: steps.linter.outputs.clang-tidy-checks-failed > 0
