--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -13,16 +13,39 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+    - name: Install packages
+      run: |
+        sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3 gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev qtwebengine5-dev nlohmann-json3-dev libtbb-dev
+
+    - name: Download ROOT
+      run: |
+        wget https://root.cern/download/root_v6.30.06.Linux-ubuntu22.04-x86_64-gcc11.4.tar.gz
+        tar -xzf root_v6.*.tar.gz
+      shell: bash
+
+    - name: Configure ROOT
+      run: |
+        source root/bin/thisroot.sh
+        echo "using $(which root)"
+      shell: bash
+      - name: Configure CMake
+      run: >
+        cmake -B ${{github.workspace}}/build
+        -S ${{github.workspace}}
+        -DCMAKE_PREFIX_PATH=root
+        -DCMAKE_EXPORT_COMPILE_COMMANDS=TRUE
+
       - uses: cpp-linter/cpp-linter-action@v2
         id: linter
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          database: ${{github.workspace}}/build
           style: ''  # disable clang-format checks.
           tidy-checks: '' # Use .clang-tidy config file.
           thread-comments: ${{ github.event_name == 'pull_request' && 'update' }}
-          ignore: 'include/GVersion.h'
+          ignore: 'include/GVersion.h|.github|${{github.workspace}}/build/_deps'
           files-changed-only: false
 
       - name: Fail fast?!
