--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -1,6 +1,7 @@
 name: Run clang-tidy
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [main, master, develop]
     paths: ['**.C', '**.c', '**.cpp', '**.h', '**.hpp', '**.cxx', '**.hxx', '**.cc', '**.hh', '**CMakeLists.txt', '**.cmake']
